--- a/frontend/index.html
+++ b/frontend/index.html
@@ -440,61 +440,54 @@ speechSynthesis.onvoiceschanged = setMaleVoice;
 setMaleVoice();
 
 /* ---------------------------------------------
-   SPEAK FUNCTION – TTS-LIPSYNC (OHNE MIKROFON)
-   Funktioniert auch bei Render.com & Handy
+   SPEAK FUNCTION – stabile Lipsync-Version
+   ✔ OHNE Mikrofon
+   ✔ ✔ Render.com / Museum / WLAN sicher
+   ✔ Nutzt Viseme_A & Viseme_E (oder jawOpen)
 --------------------------------------------- */
 function speak(text, slow = false) {
   const u = new SpeechSynthesisUtterance(text);
   u.lang = "de-DE";
-  u.rate = slow ? 0.4 : 0.95;
+  u.rate = slow ? 0.5 : 1.0;
+
+  // falls männliche Stimme gefunden → verwenden
   if (maleVoice) u.voice = maleVoice;
 
   let lipsyncInterval = null;
-  let audioCtx = null;
-  let analyser = null;
-  let buffer = null;
 
   u.onstart = () => {
     talking = true;
 
-    // 🎧 AudioContext erzeugen (nur wenn nötig)
-    if (!audioCtx) {
-      audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-    }
-    if (audioCtx.state === "suspended") {
-      audioCtx.resume();
-    }
-
-    // 🔊 Analyzer für Lautstärke
-    analyser = audioCtx.createAnalyser();
-    analyser.fftSize = 1024;
-    buffer = new Uint8Array(analyser.frequencyBinCount);
-
-    // 📌 KI-Stimme → kein Mikro nötig!
-    // Dummy Quelle, damit der Analyser aktiv bleibt
-    const osc = audioCtx.createOscillator();
-    osc.connect(analyser);
-    osc.start();
-
-    // 🧠 Lippenbewegung: Lautstärke steuert Blendshapes
     lipsyncInterval = setInterval(() => {
-      analyser.getByteFrequencyData(buffer);
+      // sanft sprechähnlich, aber nicht robotisch
+      const t = performance.now() * 0.006; // Sprechrhythmus
+      let open = Math.abs(Math.sin(t));    // Grundrhythmus
 
-      let sum = 0;
-      for (let i = 0; i < buffer.length; i++) {
-        sum += buffer[i];
-      }
-      const vol = sum / buffer.length / 255;  // 0–1 Pegel
+      // leichte Abweichung → wirkt natürlicher
+      open += Math.random() * 0.2 - 0.1;
+      open = Math.min(Math.max(open, 0), 1);  // clamp 0–1
 
-      const open = Math.min(vol * 2, 1);  // verstärken
-      setBlendshape(visemeAIndex, open);
-      setBlendshape(visemeEIndex, open * 0.6);
-    }, 40); // ≈25 FPS
+      // 👉 Hier kannst du auch nur jawOpen setzen, z.B.:
+      // setBlendshape(jawOpenIndex, open);
+
+      setBlendshape(visemeAIndex, open);          // Hauptöffnung
+      setBlendshape(visemeEIndex, open * 0.6);    // etwas schwächer
+    }, 45); // ~22 FPS → ideal für Web/Renderer/Museum
   };
 
   u.onend = () => {
     talking = false;
+
     clearInterval(lipsyncInterval);
+
+    // Mund sicher wieder schließen
+    setBlendshape(visemeAIndex, 0);
+    setBlendshape(visemeEIndex, 0);
+  };
+
+  speechSynthesis.speak(u);
+}
+
 
     // Mund schließen
     setBlendshape(visemeAIndex, 0);
