--- a/frontend/index.html
+++ b/frontend/index.html
@@ -312,7 +312,7 @@ if ("webkitSpeechRecognition" in window) {
       STATE = "hmmm";
       hmNeigen = true;
       hmStartTime = performance.now();
-      speak("Äämmmmmmmmm..... einen Moment", true);
+      speak("Ämmmmmmmmm..... einen Moment", true);
 
       // Mindestwartezeit einhalten:
       const MIN_HMMM = 4000;
